--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>
 		4.0.0
 	</modelVersion>
@@ -54,62 +55,62 @@
 				spring-boot-starter-web
 			</artifactId>
 		</dependency>
-		</dependency>
-		<dependency>
-			<groupId>
+	</dependency>
+	<dependency>
+		<groupId>
 				org.springframework
-			</groupId>
-			<artifactId>
+		</groupId>
+		<artifactId>
 				spring-beans
-			</artifactId>
-			<version>
+		</artifactId>
+		<version>
 				5.3.21
-			</version>
-		</dependency>
-		<dependency>
-			<groupId>
+		</version>
+	</dependency>
+	<dependency>
+		<groupId>
 				org.apache.tomcat.embed
+		</groupId>
+		<artifactId>
+				tomcat-embed-core
+		</artifactId>
+		<version>
+				10.0.22
+		</version>
+	</dependency>
+	<dependency>
+		<groupId>
+				org.springframework.boot
+		</groupId>
+		<artifactId>
+				spring-boot-starter-test
+		</artifactId>
+		<scope>
+				test
+		</scope>
+	</dependency>
+</dependencies>
+<build>
+	<plugins>
+		<plugin>
+			<groupId>
+					org.springframework.boot
 			</groupId>
 			<artifactId>
-				tomcat-embed-core
+					spring-boot-maven-plugin
+			</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>
+					org.codehaus.mojo
+			</groupId>
+			<artifactId>
+					cobertura-maven-plugin
 			</artifactId>
 			<version>
-				10.0.22
-			</version>
-		</dependency>
-		<dependency>
-			<groupId>
-				org.springframework.boot
-			</groupId>
-			<artifactId>
-				spring-boot-starter-test
-			</artifactId>
-			<scope>
-				test
-			</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>
-					org.springframework.boot
-				</groupId>
-				<artifactId>
-					spring-boot-maven-plugin
-				</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>
-					org.codehaus.mojo
-				</groupId>
-				<artifactId>
-					cobertura-maven-plugin
-				</artifactId>
-				<version>
 					2.7
-				</version>
-			</plugin>
-		</plugins>
-	</build>
+			</version>
+		</plugin>
+	</plugins>
+</build>
 </project>
