--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sourceEncoding=UTF-8
 # Set the property to the path of the directory containing all the XML reports.
 sonar.java.binaries=./target/*/***
 # sonar.exclusions=ci/*,**/*.txt,**/*.html
-sonar.junit.reportPaths=./target/surefire-reports
+sonar.junit.reportPaths=target/surefire-reports
