--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<repositories>
+		<repository>
+			<id>my-repo2</id>
+			<name>your custom repo</name>
+			<url>https://mvnrepository.com/artifact</url>
+		</repository>
+	</repositories>
 	<modelVersion>
 		4.0.0
 	</modelVersion>
 	<groupId>
-		com.javacodegeeks.example
+		com.javacodegeeks
 	</groupId>
 	<artifactId>
 		HelloWorld
@@ -48,6 +55,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+		<dependency>
 			<groupId>
 				org.springframework.boot
 			</groupId>
@@ -57,49 +74,13 @@
 		</dependency>
 		<dependency>
 			<groupId>
-					org.springframework
+				org.springframework.boot
 			</groupId>
 			<artifactId>
-					spring-beans
-			</artifactId>
-			<version>
-					5.3.21
-			</version>
-		</dependency>
-		<dependency>
-			<groupId>
-					org.apache.tomcat.embed
-			</groupId>
-			<artifactId>
-					tomcat-embed-core
-			</artifactId>
-			<version>
-					10.0.22
-			</version>
-		</dependency>
-		<dependency>
-			<groupId>
-					org.springframework.boot
-			</groupId>
-			<artifactId>
-					spring-boot-starter-test
+				spring-boot-starter-test
 			</artifactId>
 			<scope>
-					test
-			</scope>
-		</dependency>
-		<dependency>
-			<groupId>
-				javax.servlet
-			</groupId>
-			<artifactId>
-				javax.servlet-api
-			</artifactId>
-			<version>
-				3.0.1
-			</version>
-			<scope>
-				provided
+				test
 			</scope>
 		</dependency>
 	</dependencies>
@@ -107,21 +88,21 @@
 		<plugins>
 			<plugin>
 				<groupId>
-						org.springframework.boot
+					org.springframework.boot
 				</groupId>
 				<artifactId>
-						spring-boot-maven-plugin
+					spring-boot-maven-plugin
 				</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>
-						org.codehaus.mojo
+					org.codehaus.mojo
 				</groupId>
 				<artifactId>
-						cobertura-maven-plugin
+					cobertura-maven-plugin
 				</artifactId>
 				<version>
-						2.7
+					2.7
 				</version>
 			</plugin>
 		</plugins>
